fix data_storage_service repository logic
